<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="ahora_solo_falta_tu_fecha_de_nacimiento_esto_lo_har_s_presionando_este_bot_n_de_abajo_y_usando_el_selector_de_fecha">Ahora solo falta tu fecha de nacimiento, esto lo harás presionando este botón de abajo y usando el Selector de fecha.</string>
    <string name="app_name">RNE Finder</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button">Continuar</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="continuar">Continuar</string>
    <string name="copiar">Copiar</string>
    <string name="data1">Ingresa tu nombre y apellidos, si solo tienes un apellido, deja el campo de segundo apellido vació</string>
    <string name="data2">Fecha de nacimiento:</string>
    <string name="datosErroneos">Ingresaste algun dato mal</string>
    <string name="datosvaciosFecha">Recuerda rellenar los campos importantes, como mes, año y dia</string>
    <string name="datosvaciosName">Recuerda rellenar los campos importantes, como primer nombre y primer apellido</string>
    <string name="description">imagen</string>
    <string name="diagonal">-</string>
    <string name="diatext">Selecciona el Dia</string>
    <string name="errorFaltaDatos">Por favor, ingresa los datos correctamente.</string>
    <string name="errorFechaNacimiento">Por favor, verifica que la fecha sea ingresada correctamente</string>
    <string name="errorNoInternet">Verifica tu conexión a internet para poder obtener tu certificado</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fecha1">--/--/----</string>
    <string name="fecha_seleccionada">Fecha seleccionada:</string>
    <string name="finishtext">Lo unico que resta es copiar tu RNE, recuerda que si no funciona con 0001 puedes usar 0002, 0003, o 0004, respectivamente.</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="id_ad_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="id_ad_us">ca-app-pub-3940256099942544~3347511713</string>
    <string name="infoFinal">Ya terminamos tu RNE es:</string>
    <string name="infoFinal2">Puedes copiar tu RNE y también imprimir el certificado aquí abajo.</string>
    <string name="infoInicio">Con esta aplicación podrás generar tu Código de Registro Nacional Estudiantil (RNE) el cual usaras para obtener tu certificado de bachiller o basica.</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="monthtext">Selecciona el Mes</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="next_level">Next Level</string>
    <string name="nota1">Nota: Si solo tienes un apellido, no hay problema, deja el campo segundo apellido vació.</string>
    <string name="obtener_certificado">Obtener Certificado</string>
    <string name="p1">Con esta aplicación puedes obtener tu RNE (Registro Nacional Estudiantil)</string>
    <string name="p2">Solo debes de ingresar tus datos como nombre, apellidos y fecha de nacimiento</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pick_date">Definir Fecha de Nacimiento</string>
    <string name="pick_time">Seleccionar!</string>
    <string name="previous">Previous</string>
    <string name="primer_apellido">Ingresa tu primer apellido</string>
    <string name="primer_nombre">Ingresa tu primer nombre</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="segundo_apellido">Ingresa tu segundo apellido</string>
    <string name="start_level">Level 1</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title">background 1</string>
    <string name="title_activity_anuncios">Anuncios</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_pasofinal">Listo!</string>
    <string name="todo">Background1</string>
    <string name="tu_rne_es">Tu RNE es:</string>
    <string name="year">1900–2017</string>
    <string name="yeartext">Ingresa el Año</string>
    <string name="title_activity_c2do">activity_c2do</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobno">Mobile No.</string>
    <string name="reg_no">Reg</string>
</resources>
