<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.Design.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/imageView" android:layout_width="wrap_content" android:layout_height="742.0dip" android:scaleType="centerCrop" android:adjustViewBounds="false" android:contentDescription="@string/description" android:accessibilityLiveRegion="none" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.496" app:srcCompat="@drawable/pruebas1" />

    <Button
        android:id="@id/continuar1"
        android:layout_width="133.0dip"
        android:layout_height="49.0dip"
        android:background="@drawable/boton_redondeado"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
    <TextView android:textSize="50.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center_vertical" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/p1" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/imageView" app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>