<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@id/namepass"
        android:layout_width="133.0dip"
        android:layout_height="49.0dip"
        android:background="@drawable/boton_redondeado"
        android:onClick="obtenerdatos"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
    <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="99.0dip" android:text="@string/nota1" android:paddingStart="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0" />
    <EditText android:id="@id/name" android:background="@drawable/textboxcenter" android:layout_width="285.0dip" android:layout_height="55.0dip" android:layout_marginBottom="400.0dip" android:hint="Juan" android:ems="10" android:inputType="textPersonName" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/textView3" app:layout_constraintHorizontal_bias="0.466" app:layout_constraintStart_toStartOf="@id/textView3" />
    <TextView android:textSize="24.0sp" android:textColor="#ff000000" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/primer_apellido" app:layout_constraintBottom_toTopOf="@id/ape1" app:layout_constraintEnd_toEndOf="@id/ape1" app:layout_constraintHorizontal_bias="0.4" app:layout_constraintStart_toStartOf="@id/ape1" app:layout_constraintTop_toBottomOf="@id/name" app:layout_constraintVertical_bias="0.411" />

    <EditText
        android:id="@id/ape1"
        android:layout_width="285.0dip"
        android:layout_height="55.0dip"
        android:layout_marginBottom="288dp"
        android:background="@drawable/textboxcenter"
        android:ems="10"
        android:hint="Ronald"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/textView5" />

    <EditText
        android:id="@id/ape2"
        android:layout_width="285.0dip"
        android:layout_height="55.0dip"
        android:layout_marginBottom="172dp"
        android:background="@drawable/textboxcenter"
        android:ems="10"
        android:hint="Perez"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView android:textSize="24.0sp" android:textColor="#ff000000" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/primer_nombre" app:layout_constraintBottom_toTopOf="@id/name" app:layout_constraintEnd_toEndOf="@id/name" app:layout_constraintHorizontal_bias="0.411" app:layout_constraintStart_toStartOf="@id/name" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.942" />
    <TextView android:textSize="24.0sp" android:textColor="#ff000000" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/segundo_apellido" app:layout_constraintBottom_toTopOf="@id/ape2" app:layout_constraintEnd_toEndOf="@id/ape2" app:layout_constraintStart_toStartOf="@id/ape2" app:layout_constraintTop_toBottomOf="@id/ape1" app:layout_constraintVertical_bias="0.535" />

    <LinearLayout
        android:id="@+id/adLayout"
        android:layout_width="235dp"
        android:layout_height="68dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>